--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="card">
         <div class="qr"><img src="images/image-qr-code.png" alt="" /></div>
         <div class="qr-caption">
@@ -39,6 +39,6 @@
           </p>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
